--- a/picasso/package.json
+++ b/picasso/package.json
@@ -10,8 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.9",
+    "react-window-infinite-loader": "^1.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
